force-app/main/default/objects/BigQuery__c/BigQuery__c.object-meta.xml
<CustomObject>
    <label>BigQuery</label>
    <nameField>
        <displayFormat>BQ-{0000}</displayFormat>
        <label>BigQuery Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BigQueries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>