force-app/main/default/objects/BigQuery__c/fields/Query_Date__c.field-meta.xml
<CustomField>
    <fullName>Query_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Query Date</label>
    <type>Date</type>
</CustomField>