force-app/main/default/objects/BigQuery__c/fields/Query_Result__c.field-meta.xml
<CustomField>
    <fullName>Query_Result__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Query Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>