force-app/main/default/objects/BigQuery__c/fields/QueryText__c.field-meta.xml
<CustomField>
    <fullName>QueryText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>